--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
 	<div class="w3-third w3-container">
 		<i class="material-icons icon">list</i></h1>
 		<h2>Proceso</h2>
-		<p>La <em>modelación espacial</em> y los <em>mapas</em> son fundamentales para nuestras evaluaciones de la capacidad de la vegetación natural para reducir los riesgos de sequía e inundaciones. En colaboración con los actores locales del gobierno, instituciones, investigadores y ONGs, desarrollamos dos visiones (positiva y negativa) de posibles futuros para la región. Utilizamos herramientas como el software InVEST para analizar los servicios de los ecosistemas que resultan de estos futuros potenciales. A través de estos métodos y compartiendo los resultados de nuestro trabajo, esperamos entender mejor cómo los bosques, la vegetación ribereña y los humedales proporcionan servicios ecosistémicos a los centros urbanos de la Amazonía y su valor va mucho más allá.</p>
+		<p>La <em>modelación espacial</em> y los <em>mapas</em> son fundamentales para nuestras evaluaciones de la capacidad de la vegetación natural para reducir los riesgos de sequía e inundaciones. En colaboración con los actores locales del gobierno, instituciones, investigadores y ONGs, desarrollamos dos <em>visiones (positiva y negativa) de posibles futuros</em> para la región. Utilizamos herramientas como el software InVEST para analizar los servicios de los ecosistemas que resultan de estos futuros potenciales. A través de estos métodos y compartiendo los resultados de nuestro trabajo, esperamos entender mejor cómo los bosques, la vegetación ribereña y los humedales proporcionan servicios ecosistémicos a los centros urbanos de la Amazonía y su valor va mucho más allá.</p>
 	</div>
 </div>
 
