--- a/futuroPEM.html
+++ b/futuroPEM.html
@@ -78,28 +78,22 @@
     <div class="w3-third rightPanel">
       <div id="intro_text">
         <p>
-          Construyendo soluciones científicas para Madre de Dios: Evaluación de
+          <i style="color:grey;">¿Qué pasa si Puerto Maldonado sigue creciendo al azar? ¿Y si crecemos de forma sostenible? </i>Construyendo soluciones científicas para Madre de Dios: Evaluación de
           escenarios de desarollo futuro alrededor de Puerto Maldonado
         </p>
       </div>
 
-      <!--OLD IAN <div id="control_panel"></div>-->
-
       <!--Tabs-->
       <div id="tabsPanel">
         <div class="tab">
-          <button
-            id="defaultOpen"
-            class="tablinks"
-            onclick="openTab(event, 'Servicios')">
-            Servicios Ecosistemicos
+          <button id="defaultOpen" class="tablinks" onclick="openTab(event, 'Escenarios')">
+            Escenarios
+          </button>
+          <button class="tablinks" onclick="openTab(event, 'Servicios')">Servicios Ecosistemicos
           </button>
           <button class="tablinks" onclick="openTab(event, 'Modelos')">
             Modelos
-          </button>
-          <button class="tablinks" onclick="openTab(event, 'Escenarios')">
-            Escenarios
-          </button>
+          </button>    
         </div>
 
         <!-- Tab content -->
