--- a/futuroTAH.html
+++ b/futuroTAH.html
@@ -78,7 +78,7 @@
     <div class="w3-third rightPanel">
       <div id="intro_text">
         <p>
-          Construyendo soluciones científicas para Madre de Dios: 
+          <i style="color:grey;">¿Qué pasa si las ciudades siguen creciendo al azar? ¿Y si crecemos de forma sostenible? </i>Construyendo soluciones científicas para Madre de Dios: 
           Evaluación de escenarios de desarollo futuro en la areas de Tahuamanu-Cobija
         </p>
       </div>
@@ -88,17 +88,14 @@
       <!--Tabs-->
       <div id="tabsPanel">
         <div class="tab">
-          <button
-            id="defaultOpen"
-            class="tablinks"
-            onclick="openTab(event, 'Servicios')">Servicios Ecosistemicos
+          <button id="defaultOpen" class="tablinks" onclick="openTab(event, 'Escenarios')">
+            Escenarios
+          </button>
+          <button class="tablinks" onclick="openTab(event, 'Servicios')">Servicios Ecosistemicos
           </button>
           <button class="tablinks" onclick="openTab(event, 'Modelos')">
             Modelos
-          </button>
-          <button class="tablinks" onclick="openTab(event, 'Escenarios')">
-            Escenarios
-          </button>
+          </button>    
         </div>
 
         <!-- Tab content -->
