--- a/html/navbar.html
+++ b/html/navbar.html
@@ -17,6 +17,9 @@
       <a href="futuroTAH.html" class="link white hover-bg-dark-gray bg-black pb2 db">
         Region de Tahamanu-Cobija 
       </a>
+      <a href="futuroResultados.html" class="link white hover-bg-dark-gray bg-black pb2 db">
+        Descargar Resultados 
+      </a>
       </div>
     </div>
 
