--- a/futuroPEM.html
+++ b/futuroPEM.html
@@ -138,5 +138,7 @@
   <script src="lib/js/shp.js"></script>
   <script src='js/mapUtils.js'> </script>
   <script src="js/mapsPEM.js"></script>
-  <!--<script src="js/pointer/index.js"></script>-->
+
+  <!--<script src="js/mapsPEM_pointer.js"></script>
+  <script src="js/pointer/index.js"></script>-->
 </html>
