--- a/html/mapControls.html
+++ b/html/mapControls.html
@@ -3,9 +3,8 @@
 -->
 
         <div id="leyenda" class="leyendaHover">
-          <p style="margin-bottom: 0;">
-            <- Mapas: Uso de suelo alrededor de Puerto Maldonado 
-            <br><small>Ver la leyenda completa</small>
+          <p style="margin-bottom: 0; margin-top: 0;">
+            Uso de suelo 
           </p>
 
           <div id="leyendaMin">
