--- a/futuroPEM.html
+++ b/futuroPEM.html
@@ -123,7 +123,7 @@
     </div>
   </body>
 
-  <!--<script src="js/map/canvasLayer.js"></script>-->
+  <script src="js/pointer/canvasLayer.js"></script>
 
   <!-- Needed for Navbar-->
   <script>
