--- a/html/navbar.html
+++ b/html/navbar.html
@@ -15,7 +15,7 @@
         Region de Puerto Maldonado 
       </a>
       <a href="futuroTAH.html" class="link white hover-bg-dark-gray bg-black pb2 db">
-        Region de Tahamanu-Cobija 
+        Region de Tahuamanu-Cobija 
       </a>
       <a href="futuroResultados.html" class="link white hover-bg-dark-gray bg-black pb2 db">
         Descargar Resultados 
