--- a/pampa.html
+++ b/pampa.html
@@ -63,7 +63,7 @@
           <br>
 
           <h4> Imagen: vuelo sobre Madre de Dios (2018)</h4>
-          <div id="video"><embed src="https://youtube.com/embed/gLHKF12sufA" allowfullscreen="true" style="padding:10px;"></div>
+          <div id="video"><embed src="https://youtube.com/embed/gLHKF12sufA" allowfullscreen="true" style="padding:10px; width: 100%;"></div>
           <br>
 
       </div>
