Pointer! Ian Rocks

--- a/futuroPEM.html
+++ b/futuroPEM.html
@@ -142,8 +142,13 @@
   <script src="lib/js/leaflet.shpfile.js"></script>
   <script src="lib/js/shp.js"></script>
   <script src='js/mapUtils.js'> </script>
-  <script src="js/mapsPEM.js"></script>
 
-  <!--<script src="js/mapsPEM_pointer.js"></script>
-  <script src="js/pointer/index.js"></script>-->
+  <!-- w/o Pointer -->
+  <!--<script src="js/mapsPEM.js"></script>-->
+
+
+  <!-- w/ pointer -->
+  <script src="js/pointer/helperPointer.js"></script>
+  <script src="js/mapsPEM_pointer.js"></script>
+  <script src="js/pointer/index.js"></script>
 </html>
