--- a/futuroTAH.html
+++ b/futuroTAH.html
@@ -125,7 +125,8 @@
     </div>
   </body>
 
-  <!--<script src="js/map/canvasLayer.js"></script>-->
+  <!-- for Pointer -->
+  <script src="js/pointer/canvasLayer.js"></script>
 
   <!-- Needed for Navbar-->
   <script>
@@ -144,6 +145,13 @@
   <script src="lib/js/leaflet.shpfile.js"></script>
   <script src="lib/js/shp.js"></script>
   <script src='js/mapUtils.js'> </script>
-  <script src="js/mapsTAH.js"></script>
-  <!--<script src="js/pointer/index.js"></script>-->
+
+  <!-- w/o Pointer -->
+  <!--<script src="js/mapsTAH.js"></script>-->
+
+
+  <!-- w/ pointer -->
+  <script src="js/pointer/helperPointer.js"></script>
+  <script src="js/mapsTAH_pointer.js"></script>
+  <script src="js/pointer/index.js"></script>
 </html>
