--- a/pampa.html
+++ b/pampa.html
@@ -57,10 +57,10 @@
           </p>
 
           <h4> Propuesta de analisis de reforestación optimal</h4>
-          <p><<<<<<<<<<<<<<[CONCEPT NOTE]>>>>>>>>>>>>>>>>>>>>>
+          <p>El estado de emergencia además de cumplir con los objetivos nacionales,  nos ofrece la oportunidad de recuperar el bosque y los servicios ecosistémicos que se han perdido. Dónde y cómo reforestar realmente es importante, y puede cambiar enormemente los efectos de este esfuerzo de reforestación, en términos de éxito ambiental y beneficios tangibles para las comunidades cercanas, como por ejemplo en la calidad del agua. Con las herramientas de NatCap, podemos investigar y comparar diferentes estrategias de reforestación, en busca de la opción que nos brinde el mejor valor relacionado con costo-beneficio.
           </p>
-          <img src="static/logos/natcap.png" style="height: 10vh;" alt="Logo NatCap"><img src="static/logos/cincia.png" style="height: 10vh; padding:20px" alt="Logo Cincia">
-          <br>
+          <!--<img src="static/logos/natcap.png" style="height: 10vh;" alt="Logo NatCap"><img src="static/logos/cincia.png" style="height: 10vh; padding:20px" alt="Logo Cincia">
+          <br>-->
 
           <h4> Imagen: vuelo sobre Madre de Dios (2018)</h4>
           <div id="video"><embed src="https://youtube.com/embed/gLHKF12sufA" allowfullscreen="true" style="padding:10px; width: 100%;"></div>
