added WWF study

--- a/html/navbar.html
+++ b/html/navbar.html
@@ -32,7 +32,10 @@
       Region tri-nacional MAP </a>
       
       <a href="amazonia.html" class="link white hover-bg-dark-gray bg-black pb2 db">
-      Todo el basin Amazonico </a>
+      Estudio de CI el basin Amazonico </a>
+
+      <a href="https://www.wwf.ch/sites/default/files/doc-2017-06/2015-report-living-amazon-ecosystem-services.pdf" class="link white hover-bg-dark-gray bg-black pb2 db" target="_blank">
+      Estudio de WWF "Living Amazon" </a>
 
       </div>
     </div>
