--- a/wwf.html
+++ b/wwf.html
@@ -6,8 +6,6 @@
 <html>
   <head>
     <title>Prototipo de Visualizador PRO Agua</title>
-
-    <link rel="stylesheet" href="css/style.css"/>
   	
     <!-- Needed for Navbar-->
     <link rel="stylesheet" href="lib/css/tachyons.min.css" />
@@ -27,25 +25,22 @@
     <script src="https://code.jquery.com/jquery-3.3.1.js"   integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="   crossorigin="anonymous"></script>
     <!-- End Of: Needed for Navbar-->
 
-    
-
   </head>
 
 
-  <body class="bg-black white-80 avenir fw5">
+  <body class="bg-black-60 white-80 avenir fw5">
     <nav id="navbar">
       <div w3-include-html="html/navbar.html"></div>
     </nav>
 
-    <img src="static/images/Planet.png" alt="CI" />
+    <a href="https://www.wwf.ch/sites/default/files/doc-2017-06/2015-report-living-amazon-ecosystem-services.pdf" class="link white hover-bg-dark-gray bg-black pb2 db">
+    <img src="static/images/wwf.png">
+    </a>
+
 
     
-    <center class='titulo'>
-      <h1> Desarrollo y servicios ecosistémicos en la Amazonía: PRO-Agua</h1>
-      <h3><i> ¡Bienvenido en el Visualizador! </i></h3>
-      <button class="coolButton" onClick="openNav();">Acerca del proyecto</button>
-      <button class="coolButton" onClick="location.href='futuroPEM.html';">¡Inicia!</button>
-    </center>
+
+    <h1> yo</h1>
 
 
   </body>
