--- a/about.html
+++ b/about.html
@@ -88,7 +88,7 @@
 </div>
 
 <div class="w3-row w3-container">
-	<h2>¿Quien somos?</h2>
+	<h2>¿Quiénes somos?</h2>
 
 	<div class="w3-row w3-center">
 		<img src="static/logos/natcap.png" style="height: 190px; padding:20px" alt="Logo NatCap">
