--- a/html/navbar.html
+++ b/html/navbar.html
@@ -3,10 +3,21 @@
 -->
 
 <div class="white bg-black">
-      
-    <a href="pampa.html" class="link white hover-bg-dark-gray pa3">
+
+    <div class="dropdown bg-black pa3">
       Reforestación de la Pampa 
-    </a>
+      <div class="dropdown-content bg-black white pa3">    
+      <a href="pampa.html" class="link white hover-bg-dark-gray bg-black pb2 db">
+        Conexto de la Pampa 
+      </a>
+      <a href="futuroPampa.html" class="link white hover-bg-dark-gray bg-black pb2 db">
+        Escenarios de reforestación
+      </a>
+      <a href="futuroResultados.html" class="link white hover-bg-dark-gray bg-black pb2 db">
+        Descargar Resultados 
+      </a>
+      </div>
+    </div>
   
     <div class="dropdown bg-black pa3">
       Desarollo futuro en Madre de Dios
