--- a/html/mapControls.html
+++ b/html/mapControls.html
@@ -3,16 +3,21 @@
 -->
 
         <div id="leyenda" class="leyendaHover">
-          <p style="margin-bottom: 0; margin-top: 0;">
+          <h4 id="leyendaTitle" style="margin-bottom: 0; margin-top: 0;">
             Uso de suelo 
-          </p>
+          </h4>
 
-          <div id="leyendaMin">
-            <img src="static/images/leyenda.png" style="max-height:10vh;" alt="Leyenda" />
-          </div>
+          <div id="leyendaContents">
 
-          <div id="leyendaIntegral">
-            <img src="static/images/leyenda_integral.png" style="max-height:10vh;" alt="Leyenda" />
-          </div>
+            <div id='leyendaMin'>
+              <img src='static/images/leyenda.png' style='max-height:12vh;'alt='Leyenda' />
+            </div>
+
+            <div id='leyendaIntegral'>
+              <img src='static/images/leyenda_integral.png' style='max-height:12vh;' alt='Leyenda' />
+            </div>
 
         </div>
+
+        </div>
+
