--- a/html/navbar.html
+++ b/html/navbar.html
@@ -5,27 +5,12 @@
 <div class="white bg-black">
 
     <div class="dropdown bg-black pa3">
-      Reforestación de la Pampa 
+      Diagnóstico hídrico
       <div class="dropdown-content bg-black white pa3">    
-      <a href="pampa.html" class="link white hover-bg-dark-gray bg-black pb2 db">
-        Conexto de la Pampa 
-      </a>
-      <a href="futuroPampa.html" class="link white hover-bg-dark-gray bg-black pb2 db">
-        Escenarios de reforestación
-      </a>
-      <a href="futuroResultados.html" class="link white hover-bg-dark-gray bg-black pb2 db">
-        Descargar Resultados 
-      </a>
-      </div>
-    </div>
-  
-    <div class="dropdown bg-black pa3">
-      Desarollo futuro en Madre de Dios
-      <div class="dropdown-content bg-black white pa3">    
-      <a href="futuroPEM.html" class="link white hover-bg-dark-gray bg-black pb2 db">
+      <a href="hidricoPEM.html" class="link white hover-bg-dark-gray bg-black pb2 db">
         Region de Puerto Maldonado 
       </a>
-      <a href="futuroTAH.html" class="link white hover-bg-dark-gray bg-black pb2 db">
+      <a href="futuroResultados.html" class="link white hover-bg-dark-gray bg-black pb2 db">
         Region de Tahuamanu-Cobija 
       </a>
       <a href="futuroResultados.html" class="link white hover-bg-dark-gray bg-black pb2 db">
@@ -34,9 +19,49 @@
       </div>
     </div>
 
+    <div class="dropdown bg-black pa3">
+      Diagnóstico epidemiológico
+      <div class="dropdown-content bg-black white pa3">    
+      <a href="futuroResultados.html" class="link white hover-bg-dark-gray bg-black pb2 db">
+        Region de Puerto Maldonado 
+      </a>
+      <a href="futuroResultados.html" class="link white hover-bg-dark-gray bg-black pb2 db">
+        Region de Tahuamanu-Cobija 
+      </a>
+      <a href="futuroResultados.html" class="link white hover-bg-dark-gray bg-black pb2 db">
+        Descargar Resultados 
+      </a>
+      </div>
+    </div>
 
     <div class="dropdown bg-black pa3">
-      Servicios ecosistemicos en Amazonía
+      Diagnóstico de inundaciones
+      <div class="dropdown-content bg-black white pa3">    
+      <a href="futuroResultados.html" class="link white hover-bg-dark-gray bg-black pb2 db">
+        [Trabajo en Progresso]
+      </a>
+      <a href="futuroResultados.html" class="link white hover-bg-dark-gray bg-black pb2 db">
+        Método
+      </a>
+      </div>
+    </div>
+
+    <div class="dropdown bg-black pa3">
+      Restauración minera
+      <div class="dropdown-content bg-black white pa3">    
+      <a href="pampa.html" class="link white hover-bg-dark-gray bg-black pb2 db">
+        Contexto de la Pampa 
+      </a>
+      <a href="futuroPampa.html" class="link white hover-bg-dark-gray bg-black pb2 db">
+        Escenarios de reforestación (la Pampa)
+      </a>
+      </div>
+    </div>
+  
+
+
+    <div class="dropdown bg-black pa3">
+      Más recursos
       <div class="dropdown-content bg-black white pa3">
        
       <a href="MAP.html" class="link white hover-bg-dark-gray bg-black pb2 db">
@@ -52,12 +77,8 @@
     </div>
 
 
-    <a href="#" class="link white hover-bg-dark-gray fr pa3">
-      ⓘ    
-    </a>
-
     <a href="#" onclick="openNav();" class="link white hover-bg-dark-gray fr pa3">
-      About 
+      ⓘ PRO-Agua
     </a>
 
 </div>
