--- a/html/tab_escenarios.html
+++ b/html/tab_escenarios.html
@@ -2,14 +2,12 @@
 	<div w3-include-html="html/tab_servicios.html"></div>
 -->
 
+<h5> Desarrollando escenarios conjuntamente con expertos locales</h5>
 	<img src="static/images/desarollando_escenarios.JPG" alt="Img"/>
 
 <p>
-Cuando se busca un impacto de la ciencia en la planificación del territorio, buscando un equilibrio y armonía de la naturaleza en el desarrollo económico, a menudo es importante examinar cómo las acciones antrópicas podrían desarrollarse espacialmente. Estos son los escenarios y representan panoramas sobre posibles futuros eventos. El uso efectivo de estos escenarios pueden ayudar a determinar si la evaluación de servicios del ecosistema capta la atención y conduce a decisiones más sostenibles y de esta manera se  ayuda a los tomadores de decisiones a incorporar servicios de ecosistemas en políticas y planificación a diferentes escalas dentro del contexto de Ordenamiento Territorial.
+En la planificación del territorio, es importante examinar cómo las acciones antrópicas podrían desarrollarse espacialmente. Estos son los escenarios y representan panoramas sobre posibles futuros eventos que ayudan a evaluar los servicios ecosistémicos y permiten tomar decisiones más sostenibles incorporarando a los servicios de los ecosistemas en las políticas públicas de Ordenamiento Territorial.</p>
 
-
-Los escenarios fueron desarrollados por un grupo de expertos locales en diferentes áreas y especialistas.
-</p>
 
 <img src="static/images/desarollando_escenarios1.JPG"  alt="Img"/>
 
