--- a/html/tab_method.html
+++ b/html/tab_method.html
@@ -2,7 +2,6 @@
 	<div w3-include-html="html/tab_method.html"></div>
 -->
 
-
 <p>
 	<a href='https://naturalcapitalproject.stanford.edu/invest/' target='_blank'>InVEST</a> es un conjunto de modelos de software de código abierto que se utilizan para mapear y valorar los bienes y servicios de la naturaleza que sustentan y satisfacen la vida humana.
 </p>
@@ -27,3 +26,7 @@
 <div>
 <p><a href='https://docs.google.com/document/d/1zCunHsRvfcg6uurF3PoLlSgqjG4zP4Vta3AEVqWW8FI/edit?usp=sharing' target='_blank'>Metodologías de procesamiento de datos y los hypotesis (equipo SIG Pro Agua)</a></p>
 </div>
+
+<h4> Servicios ecosistemicos </h4>
+<div w3-include-html="html/tab_servicios.html"></div>
+
