--- a/futuroResultados.html
+++ b/futuroResultados.html
@@ -33,7 +33,10 @@
       <div w3-include-html="html/navbar.html"></div>
     </nav>
 
-    <div>
+    <div style="margin-right: 20vh; margin-left: 40vh;">
+      <h2> Esta página está en desarrollo </h2>
+
+      <h4> Descargar resultados: </h4>
       <div w3-include-html="html/tab_servicios.html"></div>
     </div>
 
