--- a/html/pickEscenario.html
+++ b/html/pickEscenario.html
@@ -10,10 +10,11 @@
                 <input
                   type="radio"
                   class="radio_btn"
-                  name="radio1"
+                  name="escenarios"
                   id="btnSost"
+                  value="Sost"
                   checked="checked"
-                  onchange="updateMap2('Sost')"
+                  onchange="updateMap2(mode,'Sost')"
                   autocomplete="off"
                 />
                 <label for="b_radio-1">Futuro Sostenible</label>
@@ -22,10 +23,10 @@
                 <input
                   type="radio"
                   class="radio_btn"
-                  name="radio1"
+                  name="escenarios"
                   id="btnReal"
-                  value="3"
-                  onchange="updateMap2('Real')"
+                  value="Real"
+                  onchange="updateMap2(mode,'Real')"
                   autocomplete="off"
                 />
                 <label for="b_radio-2">Futuro Eco-Turismo</label>
@@ -34,12 +35,13 @@
                 <input
                   type="radio"
                   class="radio_btn"
-                  name="radio1"
+                  name="escenarios"
                   id="btnPeor"
-                  onchange="updateMap2('Peor')"
+                  value="Peor"
+                  onchange="updateMap2(mode,'Peor')"
                   autocomplete="off"
                 />
-                <label for="b_radio-3">Futuro "Peor"</label>
+                <label for="b_radio-3">Futuro Peor</label>
               </div>
             </td>
           </tr>
