--- a/html/mapControls.html
+++ b/html/mapControls.html
@@ -6,9 +6,7 @@
           <h4 id="leyendaTitle" style="margin-bottom: 0; margin-top: 0;">
             Uso de suelo 
           </h4>
-
           <div id="leyendaContents">
-
             <div id='leyendaMin'>
               <img src='static/images/leyenda.png' style='max-height:12vh;'alt='Leyenda' />
             </div>
@@ -16,8 +14,6 @@
             <div id='leyendaIntegral'>
               <img src='static/images/leyenda_integral.png' style='max-height:12vh;' alt='Leyenda' />
             </div>
-
-        </div>
-
-        </div>
+          </div> <!-- End leyendaContents-->
+        </div> <!-- End leyenda -->
 
