--- a/html/tab_diagnosticoH.html
+++ b/html/tab_diagnosticoH.html
@@ -12,5 +12,5 @@ El <strong>índice de servicios hidrológicos</strong> incluye:
  <li> Sedimentos </li>
  <li> Escorrentía superficial (ES)</li>
 <li> Flujo durante la estación seca (FES)</li></ul>
-También, notamos cambios en el almacenamiento de carbono.
+<!--También, notamos cambios en el almacenamiento de carbono.-->
 
