Landing page new

--- a/hidricoPEM.html
+++ b/hidricoPEM.html
@@ -97,9 +97,9 @@
       <div id="map2_legend" class="mapControls">
         <!--<div w3-include-html="html/mapControls.html"></div>-->
         <div id="leyenda" class="leyendaHover">
-          <h4 id="leyendaTitle" style="margin-bottom: 0; margin-top: 0;">
-            Uso de suelo 
-          </h4>
+          <h6 id="leyendaTitle" style="margin-bottom: 0; margin-top: 0;">
+            Leyenda 
+          </h6>
           <div id="leyendaContents">
             <div id='leyendaMin'>
               <img src='static/images/leyenda.png' style='max-height:12vh;'alt='Leyenda' />
