--- a/html/navbar.html
+++ b/html/navbar.html
@@ -7,13 +7,13 @@
     <div class="dropdown bg-black pa3">
       Diagnóstico hídrico
       <div class="dropdown-content bg-black white pa3">    
-      <a href="hidricoPEM.html" class="link white hover-bg-dark-gray bg-black pb2 db">
+      <a href="hidricoPEM.html" class="link white hover-bg-dark-gray bg-black pb2 db navbarLink">
         Region de Puerto Maldonado 
       </a>
-      <a href="futuroResultados.html" class="link white hover-bg-dark-gray bg-black pb2 db">
+      <a href="futuroResultados.html" class="link white hover-bg-dark-gray bg-black pb2 db navbarLink">
         Region de Tahuamanu-Cobija 
       </a>
-      <a href="futuroResultados.html" class="link white hover-bg-dark-gray bg-black pb2 db">
+      <a href="futuroResultados.html" class="link white hover-bg-dark-gray bg-black pb2 db navbarLink">
         Descargar Resultados 
       </a>
       </div>
@@ -22,13 +22,13 @@
     <div class="dropdown bg-black pa3">
       Diagnóstico epidemiológico
       <div class="dropdown-content bg-black white pa3">    
-      <a href="futuroResultados.html" class="link white hover-bg-dark-gray bg-black pb2 db">
+      <a href="futuroResultados.html" class="link white hover-bg-dark-gray bg-black pb2 db navbarLink">
         Region de Puerto Maldonado 
       </a>
-      <a href="futuroResultados.html" class="link white hover-bg-dark-gray bg-black pb2 db">
+      <a href="futuroResultados.html" class="link white hover-bg-dark-gray bg-black pb2 db navbarLink">
         Region de Tahuamanu-Cobija 
       </a>
-      <a href="futuroResultados.html" class="link white hover-bg-dark-gray bg-black pb2 db">
+      <a href="futuroResultados.html" class="link white hover-bg-dark-gray bg-black pb2 db navbarLink">
         Descargar Resultados 
       </a>
       </div>
@@ -37,10 +37,10 @@
     <div class="dropdown bg-black pa3">
       Diagnóstico de inundaciones
       <div class="dropdown-content bg-black white pa3">    
-      <a href="futuroResultados.html" class="link white hover-bg-dark-gray bg-black pb2 db">
+      <a href="futuroResultados.html" class="link white hover-bg-dark-gray bg-black pb2 db navbarLink">
         [Trabajo en Progresso]
       </a>
-      <a href="futuroResultados.html" class="link white hover-bg-dark-gray bg-black pb2 db">
+      <a href="futuroResultados.html" class="link white hover-bg-dark-gray bg-black pb2 db navbarLink">
         Método
       </a>
       </div>
@@ -49,10 +49,10 @@
     <div class="dropdown bg-black pa3">
       Restauración minera
       <div class="dropdown-content bg-black white pa3">    
-      <a href="pampa.html" class="link white hover-bg-dark-gray bg-black pb2 db">
+      <a href="pampa.html" class="link white hover-bg-dark-gray bg-black pb2 db navbarLink">
         Contexto de la Pampa 
       </a>
-      <a href="futuroPampa.html" class="link white hover-bg-dark-gray bg-black pb2 db">
+      <a href="futuroPampa.html" class="link white hover-bg-dark-gray bg-black pb2 db navbarLink">
         Escenarios de reforestación (la Pampa)
       </a>
       </div>
@@ -64,20 +64,20 @@
       Más recursos
       <div class="dropdown-content bg-black white pa3">
        
-      <a href="MAP.html" class="link white hover-bg-dark-gray bg-black pb2 db">
+      <a href="MAP.html" class="link white hover-bg-dark-gray bg-black pb2 db navbarLink">
       Region tri-nacional MAP </a>
       
-      <a href="amazonia.html" class="link white hover-bg-dark-gray bg-black pb2 db">
+      <a href="amazonia.html" class="link white hover-bg-dark-gray bg-black pb2 db navbarLink">
       Estudio de CI el basin Amazonico </a>
 
-      <a href="https://www.wwf.ch/sites/default/files/doc-2017-06/2015-report-living-amazon-ecosystem-services.pdf" class="link white hover-bg-dark-gray bg-black pb2 db" target="_blank">
+      <a href="https://www.wwf.ch/sites/default/files/doc-2017-06/2015-report-living-amazon-ecosystem-services.pdf" class="link white hover-bg-dark-gray bg-black pb2 db navbarLink" target="_blank">
       Estudio de WWF "Living Amazon" </a>
 
       </div>
     </div>
 
 
-    <a href="#" onclick="openNav();" class="link white hover-bg-dark-gray fr pa3">
+    <a href="#" onclick="openNav();" class="link white hover-bg-dark-gray fr pa3 navbarLink">
       ⓘ PRO-Agua
     </a>
 
