--- a/index.html
+++ b/index.html
@@ -37,14 +37,34 @@
       <div w3-include-html="html/navbar.html"></div>
     </nav>
 
-    <img src="static/images/Planet.png" alt="CI" />
+    <img src="static/images/Planet.png" style="opacity: 0.7;"/>
 
     
     <center class='titulo'>
-      <h1> Desarrollo y servicios ecosistémicos en la Amazonía: PRO-Agua</h1>
-      <h3><i> ¡Bienvenido en el Visualizador! </i></h3>
-      <button class="coolButton" onClick="openNav();">Acerca del proyecto</button>
-      <button class="coolButton" onClick="location.href='futuroPEM.html';">¡Inicia!</button>
+      <h1> Desarrollo e impactos en los servicios ecosistémicos en la región amazónica de Madre de Dios - Acre - Pando</h1>
+
+      <button class="coolButtonSmall" style="font-style: italic; font-size: x-large; margin-bottom: 10vh; max-width:100vh;" onClick="openNav();">Acerca del proyecto PRO-Agua</button>
+
+      <div class="w3-row">
+        <div class="w3-quarter">
+            <button class="coolButtonSmall" onClick="location.href='hidricoPEM.html';">Diagnóstico de riesgos hídricos</button>
+            <p class="coolButtonTexts">¿Cómo afectará el desarrollo a los recursos hídricos de las ciudades?</p>
+        </div>
+        <div class="w3-quarter">
+          <button class="coolButtonSmall" onClick="location.href='futuroResultados.html';">Diagnóstico de riesgo epidemiológico</button>
+          <p class="coolButtonTexts">¿Cómo afectará el desarrollo al hábitat de los mosquitos portadores del dengue?</p>
+        </div>
+        <div class="w3-quarter">
+          <button class="coolButtonSmall" onClick="location.href='futuroResultados.html';">Diagnóstico de riesgo de inundaciones</button>
+          <p class="coolButtonTexts">¿Cuál es el papel del capital natural en la reducción de los picos de inundación y los riesgos de inundación para las comunidades?</p>
+        </div>
+        <div class="w3-quarter">
+          <button class="coolButtonSmall" onClick="location.href='futuroPampa.html';">Restauración en áreas mineras</button>
+          <p class="coolButtonTexts">¿Dónde se puede enfocar la restauración para maximizar los servicios de los ecosistemas?</p>
+        </div>
+      </div>
+
+
     </center>
 
 
