--- a/html/pickEscenarioPampa.html
+++ b/html/pickEscenarioPampa.html
@@ -15,7 +15,7 @@
                   onchange="updateMap2('Prio')"
                   autocomplete="off"
                 />
-                <label for="b_radio-3">Priorizado</label>
+                <label for="b_radio-3">Zonas priorizadas</label>
               </div>
               <div class="input-radio">
                 <input
@@ -27,7 +27,7 @@
                   onchange="updateMap2('Cerca')"
                   autocomplete="off"
                 />
-                <label for="b_radio-2">Reforestar cerca vias</label>
+                <label for="b_radio-2">Cercana a las vias</label>
               </div>
               <div class="input-radio">
                 <input
