--- a/html/tab_escenarios.html
+++ b/html/tab_escenarios.html
@@ -1,6 +1,8 @@
 <!-- to embed : 
 	<div w3-include-html="html/tab_servicios.html"></div>
 -->
+<div w3-include-html="html/tab_escenarios_narrativa_PEM.html"></div>
+
 
 <h5> Desarrollando escenarios conjuntamente con expertos locales</h5>
 	<img src="static/images/desarollando_escenarios.JPG" alt="Img"/>
