--- a/html/tab_diagnosticoH.html
+++ b/html/tab_diagnosticoH.html
@@ -2,8 +2,8 @@
 	<div w3-include-html="html/tab_servicios.html"></div>
 -->
 
-	<strong>Diagnóstico de riesgos para los servicios hídricos</strong>
-
+	<h5>Diagnóstico de riesgos para los servicios hídricos</h5>
+	
 	<p>Considerando diferentes maneras en las cuales el desarrollo puede crecer en la región (<a onclick="openTab(event, 'Escenarios')">Escenarios</a>), el riesgo hidrológico se evalúa con modelos InVEST (<a onclick="openTab(event, 'Método')">Método</a>). Los resultados ayudan a priorizar las subcuencas que necesitan intervenciones de políticas de restauración o protección para evitar consecuencias negativas para las personas.</p>
 
 
