--- a/html/tab_escenarios_Pampa.html
+++ b/html/tab_escenarios_Pampa.html
@@ -2,4 +2,19 @@
 	<div w3-include-html="html/tab_servicios.html"></div>
  -->
 
- <h1>MARTIN/JORGE NOS FALTAN DESCRIPTION DE LOS ESCENARIOS</h1>
+
+<strong> Escenario 1/ Reforestar zonas priorizadas ecológicamente</strong>
+<p>Este escenario fue construido sobre el supuesto de que el gobierno peruano tiene fondos muy limitados y debe optimizar los recursos  para implementar planes de reforestación en las áreas impactadas por la minería aurífera en La Pampa, por tanto a través de la consulta a expertos en restauración y reforestación se elaboró un modelo para identificar zonas de reforestación priorizadas ecológicamente, tomando en consideración criterios como; en la distancia al bosque, la extensión de las zonas impactadas por minería, el tiempo de abandono y el tipo de minería realizado, en estas zonas priorizadas se desarrollaran planes de reforestación que ayudarán al proceso de recuperación natural del bosque.
+</p>
+
+<strong>Escenario 2/ áreas de reforestación cercanos a vías de acceso</strong>
+<p>Este escenario fue construido sobre el supuesto de que el gobierno peruano tiene fondos muy limitados para implementar planes de reforestación en las áreas impactadas por la minería aurífera en la Pampa, por tanto, se plantea áreas de reforestación cercanos a las vías principales de acceso, esto debido al ahorro de costos y la facilidad de transportar el personal, plantones, insumos para hacer posible las iniciativas de reforestación en las zonas deforestadas por minería aurífera en La Pampa.</p>
+
+
+
+<strong> Escenario 3/ NADA reforestado</strong>
+<p>Este escenario fue construido sobre el supuesto de que no existe interés del gobierno peruano en implementar planes y proyectos de reforestación en las áreas impactadas por la minería aurífera en la Pampa, por tanto, no existen iniciativas de reforestación. Estas áreas impactadas tienen que seguir el proceso natural de recuperarse por sí mismas.</p>
+
+<strong>Escenario 4/ TODO reforestado </strong>
+<p>Este escenario fue construido sobre el supuesto de que el gobierno peruano en alianza con Empresas privadas y la cooperación internacional impulsa planes y proyectos de reforestación a gran escala en las áreas impactadas por minería aurífera. Teniendo como objetivo principal recuperar toda el área impactada de La Pampa.</p>
+
