--- a/html/tab_servicios_Pampa.html
+++ b/html/tab_servicios_Pampa.html
@@ -2,29 +2,20 @@
 	<div w3-include-html="html/tab_servicios.html"></div>
  -->
 
- <h1>MARTIN/JORGE NOS FALTAN VERSION FINALES DE LOS PANELES</h1>
-
 <h5>Calidad de Agua</h5>
 <p>Retención de Sedimentos: La vegetación retiene el suelo, evitando que  los sedimentos sean depositados en el rio y disminuyan la calidad del agua. El mapeo de sedimentos a los drenajes,  es de particular interés para el manejo de represas y embalses, plantas de tratamiento, costos de su potabilización, evita los altos costos en operación y mantenimiento asociados al dragado.
 </p><p> Descargar resultados: 
-	Mapas de exportación de sedimentos: <a href="static/pdfs/PANEL_PEM_SDR.pdf" download>PEM</a>, <a href="static/pdfs/PANEL_TAH_SDR.pdf" download>TAH</a>, <a href="https://drive.google.com/open?id=1z9K61p_NHR9eS_Eiryw52xgRW4Y-Uy5I" target="_blank"> Resultados crudos de InVEST SDR (rasters)</a>.
+	<a href="static/pdfs/Pampa/SDR_05 y 20 AÑOS_PAMPA.pdf" download>Mapas de exportación de sedimentos</a>.
 </p>
 
 <h5>Carbono</h5>
 <p>Los gases de invernadero podrían reducirse a través de dos procesos: reducción de emisiones antropogénicas de CO2 o creación y/o mejoramiento de los sumideros de carbono en la biosfera.  El Stock de carbono se estima en función del uso-cobertura de suelo, el Almacenamiento indica la masa de carbono en un paisaje en cualquier punto dado en el tiempo, Captura indica el cambio en el almacenamiento de carbón a través del tiempo y la valoración se aplica a la captura.
 </p><p> Descargar resultados: 
-	Mapas de almacenamiento de Carbon: <a href="static/pdfs/PANEL_PEM_CARBONO.pdf" download>PEM</a>, <a href="static/pdfs/PANEL_TAH_CARBONO.pdf" download>TAH</a>, <a href="https://drive.google.com/open?id=1MBvT4ypFJ8GJJK4UxDbUdRvIQci-Pf9C" target="_blank"> Resultados crudos de InVEST Carbono (rasters)</a>.
+	<a href="static/pdfs/Pampa/CARBONO_05 y 20 AÑOS_PAMPA.pdf" download>Mapas de almacenamiento de Carbon</a>.
 </p>
 
-<h5>Inundaciones</h5>
-<p>Mitigacion de riesgo de Inundaciones. Los humedales, los bosques y la vegetación ribereña reducen los riesgos a inundaciones y sequías, también es importante conocer  cómo ellos proveen otros beneficios.
-</p>
-
-<h5>Salud</h5>
-<p>El aumento de hábitats de mosquitos en la Amazonia es una amenaza de crecimiento de enfermedades transmitidas por estos vectores (como el dengue, chikungunya y zika), que impacta tanto a la  salud pública, como en el sector de turismo...
-<a href='salud.html'>Descargar resultados</a>
-</p>
-
-<h5>Turismo</h5>
-<p>La recreación y el turismo son componentes importantes de muchas economías nacionales y locales y contribuyen de innumerables formas al bienestar físico, el aprendizaje y la calidad de vida de los habitantes.
+<h5>Flujo de agua</h5>
+<p>[Sobre el modelo SWY]</p>
+<p> Descargar resultados: 
+	<a href="static/pdfs/Pampa/ESCORRENTIA_05 y 20 AÑOS_PAMPA.pdf" download>Mapas del Escorrienta superficial</a>, <a href="static/pdfs/Pampa/RECARGA_05 y 20 AÑOS_PAMPA.pdf" download>Mapas de Recarga local</a>.
 </p>
